# shortsfactory

./: .codexignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  shortsfactory_efficiency_v2_2.md
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_core_tables.py  0002_script_engine_fields.py  0003_video_stage_fields.py  0004_cost_logs_estimated.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py
apps/api/app/api/routes/: internal_scripts.py  internal_videos.py
apps/api/app/core/: config.py  db.py  redis.py
apps/api/app/models/: __init__.py  base.py  core.py  enums.py
apps/api/app/schemas/: __init__.py  script_engine.py  video_production.py
apps/api/app/services/: __init__.py  asset_pool_service.py  caption_worker.py  content_brain.py  content_format_engine.py  english_batch_generator.py  llm_types.py  media_utils.py  openai_client.py  render_worker.py  script_engine.py  tts_worker.py  video_job_queue.py  video_production.py  youtube_publish_service.py
apps/api/app/workers/: __init__.py  video_jobs_worker.py
apps/api/shortsfactory_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/storage/captions/: three-surprising-facts-about-ancient-rome-4b63956c.srt
apps/api/tests/: conftest.py  test_content_format_engine.py  test_database_schema.py  test_english_batch_generator.py  test_health.py  test_script_engine.py  test_video_production.py  test_youtube_template_miner.py
docs/: architecture.md  codex-token-budget.md  demo-runbook.md  (+6 more)
(+18 files in other folders)
