[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shortsfactory-api"
version = "0.1.0"
description = "Bootstrap inicial do backend FastAPI do ShortsFactory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "asyncpg>=0.29,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "redis>=5.0,<6.0",
  "alembic>=1.13,<2.0",
  "pgvector>=0.3,<1.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
]

[tool.setuptools]
packages = ["app", "app.core", "app.models"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
